search-provider: Populate the model in startup

If the translations are stripped off into gettext .mo files, as happens
on Ubuntu, we need to be operating in the right locale so that
g_desktop_app_info_get_description (et al.) read them out correctly.

Previously we were doing work in init(), which is after gtk_init() calls
setlocale().

Move the population of the model to startup(), and chain up first, so
that it happens after we're fully initialised (including the locale).

https://bugzilla.gnome.org/show_bug.cgi?id=791035